# patd_lab3

./: CMakeLists.txt
include/AdditionalStructures/: Deque.h  Queue.h  Stack.h
include/ArraySequence/: ArraySequence.h
include/ArraySequence/Immutable/: ImmutableArraySequence.h
include/ArraySequence/Mutable/: MutableArraySequence.h
include/ListSequence/: ListSequence.h
include/ListSequence/Immutable/: ImmutableListSequence.h
include/ListSequence/Mutable/: MutableListSequence.h
include/SequenceInterface/: Sequence.h
include/core/: DynamicArray.h  LinkedList.h
src/: main.cpp  new_main.cpp  task.cpp  test.cpp
